docs/0.9/_sources/api/gammapy.irf.EnergyDispersion.rst.txt
EnergyDispersion
================

.. currentmodule:: gammapy.irf

.. autoclass:: EnergyDispersion
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EnergyDispersion.default_interp_kwargs
      ~EnergyDispersion.e_reco
      ~EnergyDispersion.e_true
      ~EnergyDispersion.pdf_matrix

   .. rubric:: Methods Summary

   .. autosummary::

      ~EnergyDispersion.apply
      ~EnergyDispersion.from_diagonal_response
      ~EnergyDispersion.from_gauss
      ~EnergyDispersion.from_hdulist
      ~EnergyDispersion.get_bias
      ~EnergyDispersion.get_mean
      ~EnergyDispersion.get_resolution
      ~EnergyDispersion.pdf_in_safe_range
      ~EnergyDispersion.peek
      ~EnergyDispersion.plot_bias
      ~EnergyDispersion.plot_matrix
      ~EnergyDispersion.read
      ~EnergyDispersion.to_hdulist
      ~EnergyDispersion.to_sherpa
      ~EnergyDispersion.to_table
      ~EnergyDispersion.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: e_reco
   .. autoattribute:: e_true
   .. autoattribute:: pdf_matrix

   .. rubric:: Methods Documentation

   .. automethod:: apply
   .. automethod:: from_diagonal_response
   .. automethod:: from_gauss
   .. automethod:: from_hdulist
   .. automethod:: get_bias
   .. automethod:: get_mean
   .. automethod:: get_resolution
   .. automethod:: pdf_in_safe_range
   .. automethod:: peek
   .. automethod:: plot_bias
   .. automethod:: plot_matrix
   .. automethod:: read
   .. automethod:: to_hdulist
   .. automethod:: to_sherpa
   .. automethod:: to_table
   .. automethod:: write
